--- a/index.mdx
+++ b/index.mdx
@@ -1,52 +1,47 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Introduction to LaunchPulse"
+description: "LaunchPulse is your AI software team in the browser. "
 ---
 
-## Setting up
+![Screenshot2025 11 14at21 04 48 Pn](/images/Screenshot2025-11-14at21.04.48.png)
 
-Get your documentation site up and running in minutes.
+Instead of hiring a full dev team or wrestling with code yourself, you describe the software you want and LaunchPulse’s multi-agent system plans, builds, tests, and deploys a full-stack web application that’s ready for real users.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
+From your first prompt, LaunchPulse can generate a complete, business-ready product with dozens of features, wired-up flows, and production infrastructure already in place.
+
+## **What is LaunchPulse?**
+
+LaunchPulse is an AI-powered development platform that turns high-level ideas into live, full-stack web applications.
+
+Behind the scenes, a team of specialised AI agents work together like a digital product squad:
+
+- **Product & UX agents** to translate your idea into clear flows and features
+- **Frontend & design agents** to build the interface and user experience
+- **Backend & database agents** to generate secure, scalable server logic and data models
+- **QA / browser agents** to automatically test the app, catch issues, and propose fixes
+
+You stay in natural language. LaunchPulse handles the code, architecture, and deployment.
+
+<Card title="Start here" icon="rocket" horizontal href="/quickstart">
   Follow our three step quickstart guide.
 </Card>
+
 
 ## Make it yours
 
 Design a docs site that looks great and empowers your users.
 
 <Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
+  <Card title="Edit locally" icon="pen-to-square" href="/development">
     Edit your docs locally and preview them in real time.
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
+  <Card title="Customize your site" icon="palette" href="/essentials/settings">
     Customize the design and colors of your site to match your brand.
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
+  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
     Organize your docs to help users find what they need and succeed with your product.
   </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
+  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
     Auto-generate API documentation from OpenAPI specifications.
   </Card>
 </Columns>
@@ -56,42 +51,22 @@ Design a docs site that looks great and empowers your users.
 Everything you need to create world-class documentation.
 
 <Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
+  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
     Use MDX to style your docs pages.
   </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
+  <Card title="Code samples" icon="code" href="/essentials/code">
     Add sample code to demonstrate how to use your product.
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
+  <Card title="Images" icon="image" href="/essentials/images">
     Display images and other media.
   </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
+  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
     Write once and reuse across your docs.
   </Card>
 </Columns>
 
 ## Need inspiration?
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
+<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
   Browse our showcase of exceptional documentation sites.
 </Card>
