--- a/Agents/Agents.mdx
+++ b/Agents/Agents.mdx
@@ -3,7 +3,7 @@ title: "Core Agent Types & Architecture"
 description: "LaunchPulse doesn’t rely on one “giant” AI that tries to do everything. Every project is built by a specialised team of agents, each with a clear role, shared context, and access to its own tools. Most vibe-coding tools just throw a big prompt at a single model and hope for the best. LaunchPulse is different: it was designed from the ground up as agent-first infrastructure: "
 ---
 
-- Each agent has a **specific specialisation** / (product, UX, frontend, backend, database, QA, etc.).
+- Each agent has a **specific specialisation** (product, UX, frontend, backend, database, QA, etc.).
 - Agents work inside a **shared project brain** where requirements, code, schema, and tests are all linked.
 - A **validation and QA layer** constantly checks and corrects the work of other agents.
 - Browser-based QA agents actually **use your app like a real user**, not just scan the code.
