Documentation edits made through Mintlify web editor

--- a/Introduction/Agents.mdx
+++ b/Introduction/Agents.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Core Agent Types & Architecture"
-description: "LaunchPulse doesn’t rely on one “giant” AI that tries to do everything. Every project is built by a specialised team of agents, each with a clear role, shared context, and access to its own tools. Most vibe-coding tools just throw a big prompt at a single model and hope for the best. LaunchPulse is different: it was designed from the ground up as agent-first infrastructure: "
+description: "LaunchPulse doesn’t rely on one “giant” AI that tries to do everything. Every project is built by a specialised team of agents, each with a clear role, shared context, and access to its own tools. Most vibe-coding tools just throw a big prompt at a single model and hope for the best. LaunchPulse is different: it was designed from the ground up as agent-first infrastructure: "/
 ---
 
 - Each agent has a **specific specialisation** (product, UX, frontend, backend, database, QA, etc.).
