--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Quickstart"
+title: "Quickstart test" 
 description: "Start building awesome documentation in minutes"
 ---
 
 ## Get started in three steps
 
-helo worlld
+helo worlldhhh
 
 ### Step 1: Set up your local environment
 
